Fixed Streams/question tool styles. Fixed bug when Q/clickable plugin element blinked onmouseover and added padding-right to streams titles inorder to not overlap with red cross icon.

--- a/platform/plugins/Streams/web/css/tools/previews.css
+++ b/platform/plugins/Streams/web/css/tools/previews.css
@@ -259,6 +259,14 @@
 .Streams_answer_preview_tool .Users_avatar_name {
 	display: none;
 }
+.Streams_question_preview_tool.Q_actions_tool .Streams_preview_contents .Q_inplace_tool_static,
+.Streams_question_preview_tool.Q_actions_tool .Streams_preview_contents .Streams_preview_title,
+.Streams_question_preview_tool.Q_actions_tool .Streams_preview_contents .Q_inplace_tool_static_container,
+.Streams_answer_preview_tool.Q_actions_tool .Streams_preview_contents .Streams_preview_title {
+	white-space: normal;
+	padding-right: 30px;
+
+}
 /* </Streams_question_preview> */
 
 /* <Streams_webrtc_preview> */
